--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
-                <a href="/enroll.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Join Us</a>
+                <a href="/enroll.html" class="btn btn-primary py-2 px-4">Join Us</a>
             </div>
         </nav>
     </div>
